// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`startMakingOrders have both asks and have bids 1`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    40,
    2,
    Array [
      0.014,
    ],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    40,
    2,
    Array [
      0.01,
    ],
  ],
]
`;

exports[`startMakingOrders have both asks and have bids, expectedMidPrice < bestAskPrice 1`] = `
Array [
  Array [
    "token|WETH",
    true,
    Array [
      Object {
        "balance": 20,
        "count": 1,
        "price": 0.0125,
      },
    ],
  ],
]
`;

exports[`startMakingOrders have both asks and have bids, expectedMidPrice < bestAskPrice 2`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    40,
    2,
    Array [
      0.013,
    ],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [
      0.0125,
    ],
  ],
]
`;

exports[`startMakingOrders have both asks and have bids, expectedMidPrice > bestAskPrice 1`] = `
Array [
  Array [
    "token|WETH",
    false,
    Array [
      Object {
        "balance": 20,
        "count": 1,
        "price": 0.011,
      },
    ],
  ],
]
`;

exports[`startMakingOrders have both asks and have bids, expectedMidPrice > bestAskPrice 2`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [
      0.011,
    ],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    40,
    2,
    Array [
      0.01,
    ],
  ],
]
`;

exports[`startMakingOrders no asks, have bids 1`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    30,
    2,
    Array [
      0.01,
    ],
  ],
]
`;

exports[`startMakingOrders no asks, have bids and have bid price >= expectedMidPrice 1`] = `
Array [
  Array [
    "token|WETH",
    true,
    Array [
      Object {
        "balance": 20,
        "count": 1,
        "price": 0.014,
      },
    ],
  ],
]
`;

exports[`startMakingOrders no asks, have bids and have bid price >= expectedMidPrice 2`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    40,
    1,
    Array [
      0.014,
      0.01,
    ],
  ],
]
`;

exports[`startMakingOrders no bids, have asks 1`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    30,
    2,
    Array [
      0.014,
    ],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [],
  ],
]
`;

exports[`startMakingOrders no bids, have asks and ask price lower than expectedMidPrice 1`] = `
Array [
  Array [
    "token|WETH",
    false,
    Array [
      Object {
        "balance": 20,
        "count": 1,
        "price": 0.01,
      },
    ],
  ],
]
`;

exports[`startMakingOrders no bids, have asks and ask price lower than expectedMidPrice 2`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    40,
    1,
    Array [
      0.01,
      0.014,
    ],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [],
  ],
]
`;

exports[`startMakingOrders no orderBook 1`] = `
Array [
  Array [
    "token|WETH",
    false,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [],
  ],
  Array [
    "token|WETH",
    true,
    "type",
    "tenor",
    0.012,
    50,
    3,
    Array [],
  ],
]
`;
